--- a/Pieces auto/Dacia2-pieces.html
+++ b/Pieces auto/Dacia2-pieces.html
@@ -112,7 +112,7 @@
 </head>
 <body>
     <div class="page-header">
-        <h1>Dacia Logan</h1>
+        <h1>Dacia Logan Promotion</h1>
         <img src="./image/Dacia2.jpg" alt="Audi" class="car-image">
         <a href="../loay.html" class="back-btn">← Retour</a>
     </div>
