--- a/Pieces auto/Hyundai-pieces.html
+++ b/Pieces auto/Hyundai-pieces.html
@@ -112,7 +112,7 @@
 </head>
 <body>
     <div class="page-header">
-        <h1>Hyundai</h1>
+        <h1>Hyundai Occasions</h1>
         <img src="./image/hyundai.jpg" alt="Audi" class="car-image">
         <a href="../loay.html" class="back-btn">← Retour</a>
     </div>
