--- a/Pieces_auto/audi-pieces.html
+++ b/Pieces_auto/audi-pieces.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pièces BMW - AutoParts Pro</title>
+    <title>Pièces Audi - AutoParts Pro</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         /* ------------------------------
@@ -112,72 +112,73 @@
 </head>
 <body>
     <div class="page-header">
-        <h1>Peugoet</h1>
-        <img src="./image/peugeot.jpg" alt="Audi" class="car-image">
+        <h1>Audi</h1>
+        <img src="./image/audi.jpg" alt="Audi" class="car-image">
         <a href="../loay.html" class="back-btn">← Retour</a>
     </div>
 
-    <div class="parts-grid">
-        <div class="part-card">
-            <img src="./image/audi moteur.jpg" alt="Moteur">
-            <div class="part-name">Moteur</div>
-            <div class="part-price">À partir de 500 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi peneus.jpg" alt="Pneus">
-            <div class="part-name">Pneus</div>
-            <div class="part-price">À partir de 300 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi phares.jfif" alt="Phares">
-            <div class="part-name">Phares</div>
-            <div class="part-price">À partir de 200 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi freins.jpg" alt="Freins">
-            <div class="part-name">Freins</div>
-            <div class="part-price">À partir de 250 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi pare-chocs.jpg" alt="Pare-chocs">
-            <div class="part-name">Pare-chocs</div>
-            <div class="part-price">À partir de 350 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi suspension.jpg" alt="Suspension">
-            <div class="part-name">Suspension</div>
-            <div class="part-price">À partir de 400 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi transmission.jpg" alt="Transmission">
-            <div class="part-name">Transmission</div>
-            <div class="part-price">À partir de 600 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi batterie.jfif" alt="Batterie">
-            <div class="part-name">Batterie</div>
-            <div class="part-price">À partir de 150 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi echappement.jpg" alt="Échappement">
-            <div class="part-name">Échappement</div>
-            <div class="part-price">À partir de 450 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi retroviseurs.jpg" alt="Rétroviseurs">
-            <div class="part-name">Rétroviseurs</div>
-            <div class="part-price">À partir de 120 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi portes.jpg" alt="Portes">
-            <div class="part-name">Portes</div>
-            <div class="part-price">À partir de 800 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi capot,jpg.jpg" alt="Capot">
-            <div class="part-name">Capot</div>
-            <div class="part-price">À partir de 900 DH</div>
-        </div>
+   <div class="parts-grid">
+    <div class="part-card">
+        <img src="./image/audi moteur.jpg" alt="Moteur">
+        <div class="part-name">Moteur</div>
+        <a class="part-price" href="payment/test.html">À partir de 9500 DH</a>
     </div>
+    <div class="part-card">
+        <img src="./image/audi peneus.jpg" alt="Pneus">
+        <div class="part-name">Pneus</div>
+        <a class="part-price" href="payment/test.html">À partir de 4800 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi phares.jfif" alt="Phares">
+        <div class="part-name">Phares</div>
+        <a class="part-price" href="payment/test.html">À partir de 4500 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi freins.jpg" alt="Freins">
+        <div class="part-name">Freins</div>
+        <a class="part-price" href="payment/test.html">À partir de 5200 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi pare-chocs.jpg" alt="Pare-chocs">
+        <div class="part-name">Pare-chocs</div>
+        <a class="part-price" href="payment/test.html">À partir de 6100 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi suspension.jpg" alt="Suspension">
+        <div class="part-name">Suspension</div>
+        <a class="part-price" href="payment/test.html">À partir de 6800 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi transmission.jpg" alt="Transmission">
+        <div class="part-name">Transmission</div>
+        <a class="part-price" href="payment/test.html">À partir de 8900 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi batterie.jfif" alt="Batterie">
+        <div class="part-name">Batterie</div>
+        <a class="part-price" href="payment/test.html">À partir de 4500 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi echappement.jpg" alt="Échappement">
+        <div class="part-name">Échappement</div>
+        <a class="part-price" href="payment/test.html">À partir de 6400 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi retroviseurs.jpg" alt="Rétroviseurs">
+        <div class="part-name">Rétroviseurs</div>
+        <a class="part-price" href="payment/test.html">À partir de 4600 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi portes.jpg" alt="Portes">
+        <div class="part-name">Portes</div>
+        <a class="part-price" href="payment/test.html">À partir de 7200 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi capot,jpg.jpg" alt="Capot">
+        <div class="part-name">Capot</div>
+        <a class="part-price" href="payment/test.html">À partir de 8300 DH</a>
+    </div>
+</div>
+
 </body>
 </html>
