--- a/Pieces_auto/rolls royce-pieces.html
+++ b/Pieces_auto/rolls royce-pieces.html
@@ -112,72 +112,72 @@
 </head>
 <body>
     <div class="page-header">
-        <h1>Maserati</h1>
-        <img src="./image/maserati.jpg" alt="Audi" class="car-image">
+        <h1>Rolls Royce</h1>
+        <img src="./image/Rolls royce.jpg" alt="Audi" class="car-image">
         <a href="../loay.html" class="back-btn">← Retour</a>
     </div>
-
-    <div class="parts-grid">
-        <div class="part-card">
-            <img src="./image/audi moteur.jpg" alt="Moteur">
-            <div class="part-name">Moteur</div>
-            <div class="part-price">À partir de 500 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi peneus.jpg" alt="Pneus">
-            <div class="part-name">Pneus</div>
-            <div class="part-price">À partir de 300 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi phares.jfif" alt="Phares">
-            <div class="part-name">Phares</div>
-            <div class="part-price">À partir de 200 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi freins.jpg" alt="Freins">
-            <div class="part-name">Freins</div>
-            <div class="part-price">À partir de 250 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi pare-chocs.jpg" alt="Pare-chocs">
-            <div class="part-name">Pare-chocs</div>
-            <div class="part-price">À partir de 350 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi suspension.jpg" alt="Suspension">
-            <div class="part-name">Suspension</div>
-            <div class="part-price">À partir de 400 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi transmission.jpg" alt="Transmission">
-            <div class="part-name">Transmission</div>
-            <div class="part-price">À partir de 600 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi batterie.jfif" alt="Batterie">
-            <div class="part-name">Batterie</div>
-            <div class="part-price">À partir de 150 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi echappement.jpg" alt="Échappement">
-            <div class="part-name">Échappement</div>
-            <div class="part-price">À partir de 450 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi retroviseurs.jpg" alt="Rétroviseurs">
-            <div class="part-name">Rétroviseurs</div>
-            <div class="part-price">À partir de 120 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi portes.jpg" alt="Portes">
-            <div class="part-name">Portes</div>
-            <div class="part-price">À partir de 800 DH</div>
-        </div>
-        <div class="part-card">
-            <img src="./image/audi capot,jpg.jpg" alt="Capot">
-            <div class="part-name">Capot</div>
-            <div class="part-price">À partir de 900 DH</div>
-        </div>
+<div class="parts-grid">
+    <div class="part-card">
+        <img src="./image/audi moteur.jpg" alt="Moteur">
+        <div class="part-name">Moteur</div>
+        <a class="part-price" href="payment/test.html">À partir de 500 DH</a>
     </div>
+    <div class="part-card">
+        <img src="./image/audi peneus.jpg" alt="Pneus">
+        <div class="part-name">Pneus</div>
+        <a class="part-price" href="payment/test.html">À partir de 300 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi phares.jfif" alt="Phares">
+        <div class="part-name">Phares</div>
+        <a class="part-price" href="payment/test.html">À partir de 200 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi freins.jpg" alt="Freins">
+        <div class="part-name">Freins</div>
+        <a class="part-price" href="payment/test.html">À partir de 250 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi pare-chocs.jpg" alt="Pare-chocs">
+        <div class="part-name">Pare-chocs</div>
+        <a class="part-price" href="payment/test.html">À partir de 350 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi suspension.jpg" alt="Suspension">
+        <div class="part-name">Suspension</div>
+        <a class="part-price" href="payment/test.html">À partir de 400 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi transmission.jpg" alt="Transmission">
+        <div class="part-name">Transmission</div>
+        <a class="part-price" href="payment/test.html">À partir de 600 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi batterie.jfif" alt="Batterie">
+        <div class="part-name">Batterie</div>
+        <a class="part-price" href="payment/test.html">À partir de 150 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi echappement.jpg" alt="Échappement">
+        <div class="part-name">Échappement</div>
+        <a class="part-price" href="payment/test.html">À partir de 450 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi retroviseurs.jpg" alt="Rétroviseurs">
+        <div class="part-name">Rétroviseurs</div>
+        <a class="part-price" href="payment/test.html">À partir de 120 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi portes.jpg" alt="Portes">
+        <div class="part-name">Portes</div>
+        <a class="part-price" href="payment/test.html">À partir de 800 DH</a>
+    </div>
+    <div class="part-card">
+        <img src="./image/audi capot,jpg.jpg" alt="Capot">
+        <div class="part-name">Capot</div>
+        <a class="part-price" href="payment/test.html">À partir de 900 DH</a>
+    </div>
+</div>
+
 </body>
 </html>
