--- a/Login1/index.html
+++ b/Login1/index.html
@@ -19,13 +19,14 @@
             margin-bottom: 10px;
             font-family: 'Cinzel', serif;
             font-weight: 700;
+            
             letter-spacing: 3px;
-            text-shadow: 0 0 10px rgba(255, 76, 76, 0.5);
+            text-shadow: 0 0 10px rgba(189, 26, 26, 0.5);
             font-size: 28px;
         }
 
         p {
-            color: #fff;
+            color: #6bc3f9;
             text-align: center;
             margin-bottom: 25px;
             font-size: 14px;
@@ -36,8 +37,8 @@
         }
 
         .login-btn {
-            border: 1px solid #ff4c4c;
-            color: #ff4c4c;
+            border: 1px solid #761b1b;
+            color: #5caddf;
         }
 
         .login-btn:hover {
@@ -59,37 +60,77 @@
         #particles-js {
             background-color: #000;
         }
+        .input-group {
+  position: relative;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 10px;
+  top: 30%;
+ 
+  cursor: pointer;
+  color: #6bf9f9;
+  z-index: 10;
+ 
+}
+
+#eyeOpen, #eyeClosed {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+}
     </style>
 
     <div id="particles-js"></div>
-
     <div class="container">
         <div class="form-box">
-            <h2>Create Your Account</h2>
+            <div class="titlr">
+                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" class="title-icon" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M505.12019,19.09375c-1.18945-5.53125-6.65819-11-12.207-12.1875C460.716,0,435.507,0,410.40747,0,307.17523,0,245.26909,55.20312,199.05238,128H94.83772c-16.34763.01562-35.55658,11.875-42.88664,26.48438L2.51562,253.29688A28.4,28.4,0,0,0,0,264a24.00867,24.00867,0,0,0,24.00582,24H127.81618l-22.47457,22.46875c-11.36521,11.36133-12.99607,32.25781,0,45.25L156.24582,406.625c11.15623,11.1875,32.15619,13.15625,45.27726,0l22.47457-22.46875V488a24.00867,24.00867,0,0,0,24.00581,24,28.55934,28.55934,0,0,0,10.707-2.51562l98.72834-49.39063c14.62888-7.29687,26.50776-26.5,26.50776-42.85937V312.79688c72.59753-46.3125,128.03493-108.40626,128.03493-211.09376C512.07526,76.5,512.07526,51.29688,505.12019,19.09375ZM384.04033,168A40,40,0,1,1,424.05,128,40.02322,40.02322,0,0,1,384.04033,168Z"></path></svg>
+                 <h2>Welcome To Service_BL</h2>
+                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" class="title-icon" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M466.5 83.7l-192-80a48.15 48.15 0 0 0-36.9 0l-192 80C27.7 91.1 16 108.6 16 128c0 198.5 114.5 335.7 221.5 380.3 11.8 4.9 25.1 4.9 36.9 0C360.1 472.6 496 349.3 496 128c0-19.4-11.7-36.9-29.5-44.3zM256.1 446.3l-.1-381 175.9 73.3c-3.3 151.4-82.1 261.1-175.8 307.7z"></path></svg>
+            </div>         
             <p>Join Care Pieces Today</p>
 
-            <form>
-                <div class="input-group">
-                    <input type="email" id="email" required class="input-field">
-                    <label for="email">Email</label>
-                    <div class="glow-line"></div>
-                </div>
+           <form action="logine.php" method="POST">
+    <div class="input-group">
+        <input type="email" id="email" name="email" required class="input-field">
+        <label for="email">Email</label>
+        <div class="glow-line"></div>
+    </div>
 
-                <div class="input-group">
-                    <input type="password" id="password" required class="input-field">
-                    <label for="password">Password</label>
-                    <div class="glow-line"></div>
-                </div>
+    <div class="input-group" style="position: relative;">
 
-                <button type="submit" class="login-btn">
-                    <span>SIGN IN</span>
-                    <div class="btn-glow"></div>
-                </button>
+    <input type="password" id="password" name="passworde" required class="input-field">
+    <label for="password">Password</label>
+    
+    <!-- 👁 Icône pour basculer -->
+    <span class="toggle-password" id="togglePassword">
+        <!-- 👁 Ouvert (masqué au départ) -->
+        <svg id="eyeOpen" style="display: none;" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 576 512" height="18" width="18" xmlns="http://www.w3.org/2000/svg">
+            <path d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path>
+        </svg>
 
-                <div class="signup-link">
-                    Already have an account? <a href="./Registre.html">INSCRIPTION</a>
-                </div>
-            </form>
+        <!-- 👁 Fermé (visible par défaut) -->
+        <svg id="eyeClosed" style="display: inline;" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 640 512" height="18" width="18" xmlns="http://www.w3.org/2000/svg">
+            <path d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"></path>
+        </svg>
+    </span>
+
+    <div class="glow-line"></div>
+</div>
+
+
+    <button type="submit" class="login-btn">
+        <span>SIGN IN</span>
+        <div class="btn-glow"></div>
+    </button>
+
+    <div class="signup-link">
+        Already have an account? <a href="./Registre.html">INSCRIPTION</a>
+    </div>
+</form>
+
         </div>
     </div>
 
@@ -114,6 +155,27 @@
                 "retina_detect": true
             });
         });
-    </script>
+
+
+document.addEventListener('DOMContentLoaded', function () {
+  const togglePassword = document.getElementById('togglePassword');
+  const passwordInput = document.getElementById('password');
+  const eyeOpen = document.getElementById('eyeOpen');
+  const eyeClosed = document.getElementById('eyeClosed');
+
+  togglePassword.addEventListener('click', function () {
+    if (passwordInput.type === 'password') {
+      passwordInput.type = 'text';
+      eyeOpen.style.display = 'inline';
+      eyeClosed.style.display = 'none';
+    } else {
+      passwordInput.type = 'password';
+      eyeOpen.style.display = 'none';
+      eyeClosed.style.display = 'inline';
+    }
+  });
+});
+</script>
+
 </body>
 </html>
